--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
 </head>
 
 <body>
-    <h1>This is a code for demo purposes</h1>
+    <h1>This is a code for demo purpose</h1>
+    <h2>Learning Git...</h2>
     <br>
-    <p> <a href="https://www.linkedin.com/in/sanket-suradkar/">Connect me on linkedin</a>
-    </p>
-
 </body>
 
 </html>
