--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <h1>This is a code for demo purpose</h1>
     <h2>Learning Git...</h2>
+    <h3>Readme file added in Github and editing index file in main branch</h3>
     <br>
 </body>
 
