--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>This is a code for demo purpose</h1>
-    <h2>Welcome User</h2>
+    <h2>Welcome Dinoct Solutions</h2>
     <h3>This is a Jenkins freestyle project</h3>
     <br>
 </body>
